--- a/proiect/BugTracker/BugTracker.WebUI/Views/Account/Login.cshtml
+++ b/proiect/BugTracker/BugTracker.WebUI/Views/Account/Login.cshtml
@@ -1,63 +1,77 @@
-﻿@using BugTracker.WebUI.Models
-@model LoginViewModel
+﻿@model BugTracker.WebUI.Models.LoginViewModel
+
+@{
+    Layout = null;
+}
 
 @{
     ViewBag.Title = "Log in";
 }
 
-<h2>@ViewBag.Title.</h2>
-<div class="row">
-    <div class="col-md-8">
-        <section id="loginForm">
-            @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
-            {
-                @Html.AntiForgeryToken()
-                <h4>Use a local account to log in.</h4>
-                <hr />
-                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                <div class="form-group">
-                    @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
-                    <div class="col-md-10">
-                        @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
-                        @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
-                    </div>
-                </div>
-                <div class="form-group">
-                    @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" })
-                    <div class="col-md-10">
-                        @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
-                        @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
-                    </div>
-                </div>
-                <div class="form-group">
-                    <div class="col-md-offset-2 col-md-10">
-                        <div class="checkbox">
-                            @Html.CheckBoxFor(m => m.RememberMe)
-                            @Html.LabelFor(m => m.RememberMe)
-                        </div>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <div class="col-md-offset-2 col-md-10">
-                        <input type="submit" value="Log in" class="btn btn-default" />
-                    </div>
-                </div>
-                <p>
-                    @Html.ActionLink("Register as a new user", "Register")
-                </p>
-                @* Enable this once you have account confirmation enabled for password reset functionality
-                <p>
-                    @Html.ActionLink("Forgot your password?", "ForgotPassword")
-                </p>*@
-            }
-        </section>
-    </div>
-    <div class="col-md-4">
-        <section id="socialLoginForm">
-            @Html.Partial("_ExternalLoginsListPartial", new ExternalLoginListViewModel { Action = "ExternalLogin", ReturnUrl = ViewBag.ReturnUrl })
-        </section>
-    </div>
-</div>
-@section Scripts {
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>@ViewBag.Title - My ASP.NET Application</title>
+    @Styles.Render("~/Content/css")
+    @Styles.Render("~/Content/Colorgraph.css")
+    @Styles.Render("~/Content/themify-icons.css")
+
+    @Scripts.Render("~/bundles/modernizr")
+    @Scripts.Render("~/bundles/jquery")
+    @Scripts.Render("~/bundles/bootstrap")
     @Scripts.Render("~/bundles/jqueryval")
-}
+    @Scripts.Render("~/Scripts/misc/Button-checkbox.js")
+</head>
+<body>
+    <div class="container">
+        <div class="row" style="margin-top:20px">
+            <div class="col-xs-12 col-sm-8 col-md-6 col-sm-offset-2 col-md-offset-3">
+                <section id="loginForm">
+                    @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post,
+                        new { role = "form" }))
+                    {
+                        <h1>@ViewBag.Title</h1>
+                        <hr class="colorgraph" />
+                        @Html.AntiForgeryToken()
+                        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+
+                        <div class="form-group">
+                            <div class="input-group input-group-lg">
+                                <span class="input-group-addon"><span class="ti-user"></span></span>
+                                @Html.TextBoxFor(m => m.UserName, new { @class = "form-control", @placeholder = "Username", autofocus = "", style = "max-width:100%" })
+                            </div>
+                            @Html.ValidationMessageFor(m => m.UserName, "", new { @class = "text-danger" })
+                        </div>
+                        <div class="form-group">
+                            <div class="input-group input-group-lg">
+                                <span class="input-group-addon"><span class="ti-key"></span></span>
+                                @Html.PasswordFor(m => m.Password, new { @class = "form-control", @placeholder = "Password", style = "max-width:100%" })
+                            </div>
+                            @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
+                        </div>
+                        <div class="button-checkbox">
+                            <button type="button" class="btn btn-xs" data-color="info"></button> Remember me
+                            @Html.CheckBoxFor(m => m.RememberMe, new { @class = "hidden" })
+                            @*@Html.ActionLink("Forgot your password?", "ForgotPassword", "Account", new { @class = "btn btn-link pull-right" })*@
+                        </div>
+
+                        <hr class="colorgraph" />
+
+                        <div class="row">
+                            <div class="col-xs-6 col-sm-6 col-md-6">
+                                <input type="submit" value="Log in" class="btn btn-success btn-block btn-lg" />
+                            </div>
+                            <div class="col-xs-6 col-sm-6 col-md-6">
+                                @Html.ActionLink("Register", "Register", "Account", new { @class = "btn btn-primary btn-block btn-lg" })
+                            </div>
+                        </div>
+                    }
+                </section>
+            </div>
+
+        </div>
+    </div>
+</body>
+</html>
