--- a/proiect/BugTracker/BugTracker.WebUI/Views/Project/Create.cshtml
+++ b/proiect/BugTracker/BugTracker.WebUI/Views/Project/Create.cshtml
@@ -25,7 +25,8 @@
             <hr class="colorgraph">
 
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                @Html.ActionLink("Cancel", "Index", "Home", null, new { @class = "btn btn-default", style = "width:24.5%" })
+                <input type="submit" value="Create" class="btn btn-primary" style="width:24.5%" />
             </div>
         }
     </div>
