--- a/proiect/BugTracker/BugTracker.WebUI/Views/User/Add.cshtml
+++ b/proiect/BugTracker/BugTracker.WebUI/Views/User/Add.cshtml
@@ -36,7 +36,8 @@
             <hr class="colorgraph" />
 
             <div class="form-group">
-                <input type="submit" value="Add" class="btn btn-primary" style="width:20%" />
+                @Html.ActionLink("Cancel", "Index", "Home", null, new { @class = "btn btn-default", style = "width:24.5%" })
+                <input type="submit" value="Create" class="btn btn-primary" style="width:24.5%" />
             </div>
         }
     </div>
