--- a/proiect/BugTracker/BugTracker.WebUI/Views/Issue/Edit.cshtml
+++ b/proiect/BugTracker/BugTracker.WebUI/Views/Issue/Edit.cshtml
@@ -83,7 +83,7 @@
                 <div class="form-group">
                     @Html.LabelFor(model => model.MilestoneId, "Milestone", htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-10">
-                        @Html.DropDownList("ProjectSelectId", null, "version 1.0", htmlAttributes: new { @class = "form-control", style = "max-width:100%" })
+                        @Html.DropDownList("ProjectSelectId", null, "Version 1.0", htmlAttributes: new { @class = "form-control", style = "max-width:100%" })
                         @Html.ValidationMessageFor(model => model.MilestoneId, "", new { @class = "text-danger" })
                     </div>
                 </div>
@@ -94,6 +94,16 @@
                         @*@Html.DropDownList("ResponsibleId", null, htmlAttributes: new { @class = "form-control" })*@
                         @Html.DropDownList("ProjectSelectId", null, "Ioana Fotea", htmlAttributes: new { @class = "form-control", style = "max-width:100%" })
                         @Html.ValidationMessageFor(model => model.ResponsibleId, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    @Html.Label("Tags", htmlAttributes: new { @class = "control-label col-md-2" })
+                    <div class="col-md-10">
+                        <div class="input-group">
+                            @Html.TextBox("Tags", null, htmlAttributes: new { @class = "form-control", style = "max-width:100%" })
+                            <span class="input-group-addon"><span class="glyphicon glyphicon-tags"></span></span>
+                        </div>
                     </div>
                 </div>
 
