--- a/proiect/BugTracker/BugTracker.WebUI/Views/Milestone/Create.cshtml
+++ b/proiect/BugTracker/BugTracker.WebUI/Views/Milestone/Create.cshtml
@@ -32,10 +32,12 @@
                 @Html.ValidationMessageFor(model => model.Date, "", new { @class = "text-danger" })
             </div>
             
+            <p>I also need a project!!</p>
+            
             <hr class="colorgraph" />
 
             <div class="form-group">
-                @Html.ActionLink("Cancel", "Index", "Home", null, new { @class = "btn btn-default", style = "width:24.5%" })
+                @Html.ActionLink("Cancel", "Index", "Issue", null, new { @class = "btn btn-default", style = "width:24.5%" })
                 <input type="submit" value="Create" class="btn btn-primary" style="width:24.5%" />
             </div>
         }
