--- a/proiect/BugTracker/BugTracker.WebUI/Views/User/Index.cshtml
+++ b/proiect/BugTracker/BugTracker.WebUI/Views/User/Index.cshtml
@@ -22,7 +22,7 @@
 
             <span class="pull-right">
                 <a class="btn btn-sm btn-danger open-deleteUserDialog" data-toggle="modal" href="#deleteUserDialog"
-                   data-id="@Model[i].Id">
+                   data-id="@Model[i].Id" data-name="@Model[i].DisplayName">
                     <i class="glyphicon glyphicon-remove"></i>
                 </a>
             </span>
@@ -31,7 +31,7 @@
 
             if (i != Model.Count - 1)
             {
-                <hr />
+                <br /><hr/>
             }
         }
         <br />
@@ -39,8 +39,7 @@
     </div>
 </div>
 
-  <!-- Modal -->
-  <div class="modal fade" id="deleteUserDialog" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+<div class="modal fade" id="deleteUserDialog" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
@@ -48,7 +47,7 @@
                 <h4 class="modal-title">Delete user</h4>
             </div>
             <div class="modal-body">
-                <p>Are you sure you want to delete this user?</p>
+                <p id="question"></p>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
@@ -56,32 +55,4 @@
             </div>
         </div>
     </div>
-</div>
-
-@*<div class="modal hide" id="deleteUserDialog">
-    <div class="modal-header">
-        <button class="close" data-dismiss="modal">×</button>
-        <h3>Delete user</h3>
-    </div>
-    <div class="modal-body">
-        <p>Are you sure you want to delete this user?</p>
-    </div>
-    <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-        <a class="btn btn-primary" id="userId">Delete</a>
-    </div>
-</div>*@
-
-<div class="modal hide" id="deleteUserDialog">
-    <div class="modal-header">
-        <button class="close" data-dismiss="modal">×</button>
-        <h3>Delete user</h3>
-    </div>
-    <div class="modal-body">
-        <p>Are you sure you want to delete this user?</p>
-    </div>
-    @*<div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-        <a class="btn btn-primary" id="userId">Delete</a>
-    </div>*@
 </div>
