--- a/proiect/BugTracker/BugTracker.WebUI/Views/Shared/_Layout.cshtml
+++ b/proiect/BugTracker/BugTracker.WebUI/Views/Shared/_Layout.cshtml
@@ -51,9 +51,9 @@
                             </ul>
                         </li>
                         <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Users <b class="caret"></b></a>
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Team <b class="caret"></b></a>
                             <ul class="dropdown-menu">
-                                <li>@Html.ActionLink("Manage users", "Index", "User")</li>
+                                <li>@Html.ActionLink("Manage team", "Index", "User")</li>
                                 <li class="divider"></li>
                                 <li>@Html.ActionLink("Add new user", "Add", "User")</li>
                             </ul>
@@ -81,10 +81,6 @@
     </div>
     <div class="container body-content">
         @RenderBody()
-        <hr />
-        <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
-        </footer>
     </div>
 
     @Scripts.Render("~/bundles/bootstrap")
